update of dependencies