@@ -1,14 +1,15 @@
 plugins {
-    id "org.springframework.boot" version "2.3.4.RELEASE"
-    id "io.spring.dependency-management" version "1.0.10.RELEASE"
+    id "org.springframework.boot" version "2.6.1"
+//    id "org.springframework.cloud.contract" version "3.0.3"
+    id "io.spring.dependency-management" version "1.0.11.RELEASE"
     id "java"
-    id "au.com.dius.pact" version "4.1.7"
+//    id "au.com.dius.pact" version "4.1.7"
 }
 
 group = "ddd-by-example"
 version = "0.0.1-SNAPSHOT"
-sourceCompatibility = "1.11"
-targetCompatibility = "1.11"
+sourceCompatibility = "1.17"
+targetCompatibility = "1.17"
 
 repositories {
     mavenCentral()
@@ -23,18 +24,20 @@ dependencies {
     implementation "org.springframework.kafka:spring-kafka"
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.boot:spring-boot-starter-log4j2"
-    implementation "io.micrometer:micrometer-core:1.5.5"
+    implementation 'io.micrometer:micrometer-core:1.9.2'
     implementation "io.micrometer:micrometer-registry-prometheus"
-    implementation "io.github.resilience4j:resilience4j-retry:1.4.0"
-    implementation 'com.vladmihalcea:hibernate-types-52:2.9.13'
-    implementation 'org.apache.httpcomponents:httpclient:4.5.12'
-    implementation "io.vavr:vavr:0.9.3"
+    implementation "io.github.resilience4j:resilience4j-retry:1.7.1"
+    implementation 'org.hibernate:hibernate-validator:7.0.5.Final'
+    implementation 'com.vladmihalcea:hibernate-types-52:2.17.1'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+    implementation 'io.vavr:vavr:0.10.4'
+    implementation 'com.zaxxer:HikariCP:3.3.1'
 
-    runtimeOnly "org.postgresql:postgresql:42.2.14"
+    runtimeOnly 'org.postgresql:postgresql:42.4.2'
 
     //Lombok
-    compileOnly "org.projectlombok:lombok"
-    annotationProcessor "org.projectlombok:lombok"
+    compileOnly "org.projectlombok:lombok:1.18.24"
+    annotationProcessor "org.projectlombok:lombok:1.18.24"
 
     //Kafka
     implementation "org.springframework.kafka:spring-kafka"
@@ -46,33 +49,48 @@ dependencies {
     }
 
     //Swagger
-    implementation("io.swagger:swagger-core:1.5.22")
-    implementation("io.springfox:springfox-swagger2:2.9.2")
-    testImplementation("io.swagger:swagger-parser:1.0.44")
+    implementation("io.swagger:swagger-core:1.6.4")
+    implementation("io.springfox:springfox-swagger2:2.10.5")
+    testImplementation("io.swagger:swagger-parser:1.0.56")
 
-    testImplementation "org.testcontainers:testcontainers:1.15.1"
-    testImplementation "org.testcontainers:kafka:1.15.1"
-    testImplementation "org.testcontainers:postgresql:1.15.1"
-    testImplementation "org.awaitility:awaitility:4.0.1"
-    testImplementation 'au.com.dius.pact.consumer:junit5:4.1.14'
-    testImplementation 'au.com.dius.pact.consumer:java8:4.1.14'
-    testImplementation 'au.com.dius.pact.provider:junit5spring:4.1.14'
-    testImplementation("org.skyscreamer:jsonassert:1.5.0")
+    testImplementation 'org.testcontainers:testcontainers:1.17.3'
+    testImplementation 'org.testcontainers:kafka:1.17.3'
+    testImplementation 'org.testcontainers:postgresql:1.17.3'
+    testImplementation 'org.awaitility:awaitility:4.2.0'
+    testImplementation 'au.com.dius.pact.consumer:junit5:4.3.14'
+    testImplementation 'au.com.dius.pact.provider:junit5spring:4.3.14'
+    testImplementation('org.skyscreamer:jsonassert:1.5.1')
     testImplementation("org.springframework.security:spring-security-test")
-
-    testCompileOnly "org.projectlombok:lombok"
-    testAnnotationProcessor "org.projectlombok:lombok"
+    testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-verifier:3.1.3'
+    testCompileOnly 'org.projectlombok:lombok:1.18.24'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 
 test {
     useJUnitPlatform()
 }
 
-pact {
-    publish {
-        pactBrokerUrl = 'pact.broker.url'
-    }
-}
+//contracts {
+//    testFramework = "JUNIT5"
+//
+//    basePackageForTests = 'devices.configuration'
+//    baseClassMappings {
+//        baseClassMapping(".*config.*", "devices.configuration.configs.ContractTestingBase")
+//    }
+//}
+//
+//contractTest {
+//    useJUnitPlatform()
+//    testLogging {
+//        exceptionFormat = 'full'
+//    }
+//}
+
+//pact {
+//    publish {
+//        pactBrokerUrl = 'pact.broker.url'
+//    }
+//}
 
 configurations {
     //we exclude spring-boot-starter-logging, so that slf4j can switch to log4j2 (excluding logback-classic is not enough apparently)
@@ -83,6 +101,14 @@ configurations {
 
 compileJava {
     options.incremental = true
+    options.compilerArgs << "--enable-preview"
+    options.compilerArgs << "-parameters"
+    options.compilerArgs << "-Xlint:unchecked"
+}
+
+compileTestJava {
+    options.incremental = true
+    options.compilerArgs << "--enable-preview"
     options.compilerArgs << "-parameters"
     options.compilerArgs << "-Xlint:unchecked"
 }
